# alysida

./: CMakeLists.txt  main.cpp  run.sh  segfaultdebugger.sh
src/: block.h  helper.h  merkle_tree.h  private_key.h  sha256.h  transaction.h  wallet.h
src/db/: database.h
